Fix Material layout z-index (#2149)

--- a/Source/Blazorise.Material/Styles/_layout.scss
+++ b/Source/Blazorise.Material/Styles/_layout.scss
@@ -1,15 +1,15 @@
 ﻿.b-layout-header {
     &-fixed {
-        z-index: 1020;
+        z-index: 160;
     }
 }
 
 .b-layout-footer {
     &-fixed {
-        z-index: 1020;
+        z-index: 160;
     }
 }
 
 .b-layout-sider-content {
-    z-index: 1021;
+    z-index: 161;
 }
